--- a/src/app/components/playlist/playlist/playlist.component.html
+++ b/src/app/components/playlist/playlist/playlist.component.html
@@ -1,1 +1,49 @@
-<p>playlist works!</p>
+<div class="container">
+  <mat-toolbar-row class="mt-3">
+    <h2>Listas de reproducción</h2>
+  </mat-toolbar-row>
+
+  <div class="row">
+    <div class="col-xl-6">
+        <button mat-raised-button color="primary">
+            <mat-icon>playlist_add</mat-icon>
+            Agregar playlist
+          </button>
+    </div>
+  </div>
+  <mat-divider></mat-divider>
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <!--- Note that these columns can be defined in any order.
+              The actual rendered columns are set as a property on the row definition" -->
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Nombre</th>
+      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+    </ng-container>
+
+    <!-- Weight Column -->
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef>Descripción</th>
+      <td mat-cell *matCellDef="let element">{{ element.description }}</td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef style="text-align:center;">Acción</th>
+      <td mat-cell *matCellDef="let element" style="text-align:center;">
+        <button mat-raised-button class="bg-primary text-white">
+          <mat-icon>edit</mat-icon>
+          Editar
+        </button>
+        <button mat-raised-button color="warn">
+          <mat-icon>delete</mat-icon>
+          Eliminar
+        </button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+</div>
