--- a/src/app/playlists/pages/playlist-list/playlist-list.component.html
+++ b/src/app/playlists/pages/playlist-list/playlist-list.component.html
@@ -1,1 +1,38 @@
-<p>playlist-list works!</p>
+<h1>Listas de reproducción</h1>
+<mat-divider></mat-divider>
+<br />
+<button mat-raised-button color="primary">
+  <mat-icon>add</mat-icon>
+  <span>Agregar nueva playlist</span>
+</button>
+<br />
+<br />
+
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <!-- Name Column -->
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef>Nombre</th>
+    <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+  </ng-container>
+
+  <!-- Description Column -->
+  <ng-container matColumnDef="description">
+    <th mat-header-cell *matHeaderCellDef>Descripción</th>
+    <td mat-cell *matCellDef="let element">{{ element.description }}</td>
+  </ng-container>
+  <!-- Action Column -->
+  <ng-container matColumnDef="action">
+    <th mat-header-cell *matHeaderCellDef>Acción</th>
+    <td mat-cell *matCellDef="let element">
+      <button mat-button color="primary" [routerLink]="['/playlist', element.name]">
+        <mat-icon>visibility</mat-icon>
+      </button>
+      <button mat-button color="warn">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
