--- a/src/app/playlists/pages/home/home.component.html
+++ b/src/app/playlists/pages/home/home.component.html
@@ -1,1 +1,20 @@
-<p>home works!</p>
+<mat-toolbar color="primary">
+  <mat-icon>headphones</mat-icon>
+  <span>Spuchifai</span>
+  <span class="example-spacer"></span>
+  <button mat-button
+  >
+    Playlists
+  </button>
+  <span class="spacer"></span>
+  <button
+    mat-icon-button
+    class="example-icon"
+    aria-label="Example icon-button with share icon"
+  >
+    <mat-icon>logout</mat-icon>
+  </button>
+</mat-toolbar>
+<div class="mx-5 my-5 margin-auto">
+    <router-outlet></router-outlet>
+</div>
