--- a/src/app/playlists/pages/home/home.component.html
+++ b/src/app/playlists/pages/home/home.component.html
@@ -2,9 +2,24 @@
   <mat-icon>headphones</mat-icon>
   <span>Spuchifai</span>
   <span class="example-spacer"></span>
-  <button mat-button
+  <button mat-button routerLink="/playlist/playlist-list"
   >
     Playlists
+  </button>
+  <button mat-button routerLink="/playlist/playlist-search"
+  >
+  <mat-icon>search</mat-icon>
+    Buscar playlist
+  </button>
+  <button mat-button routerLink="/playlist/playlist-add"
+  >
+  <mat-icon>playlist_add</mat-icon>
+    Nueva playlist
+  </button>
+  <button mat-button routerLink="/playlist/playlist-add"
+  >
+  <mat-icon>note_add</mat-icon>
+    Nueva canción
   </button>
   <span class="spacer"></span>
   <button
