--- a/src/app/playlists/pages/playlist-list/playlist-list.component.html
+++ b/src/app/playlists/pages/playlist-list/playlist-list.component.html
@@ -1,59 +1,64 @@
 <h1>Listas de reproducción</h1>
 <mat-divider></mat-divider>
 <br />
-<button mat-raised-button color="primary" routerLink="/playlist/playlist-add">
-  <mat-icon>add</mat-icon>
-  <span>Agregar nueva playlist</span>
-</button>
-<br />
-<br />
+<div
+  class="row justify-content-center"
+  cols="1"
+  *ngIf="dataSource.length === 0; else tablePlaylist"
+>
+  <div class="col-xl-2">
+    <mat-spinner></mat-spinner>
+  </div>
+</div>
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-  <!-- Name Column -->
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef>Nombre</th>
-    <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-  </ng-container>
+<ng-template #tablePlaylist>
+  <button mat-raised-button color="primary" routerLink="/playlist/playlist-add">
+    <mat-icon>add</mat-icon>
+    <span>Agregar nueva playlist</span>
+  </button>
+  <br />
+  <br />
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Nombre</th>
+      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+    </ng-container>
 
-  <!-- Description Column -->
-  <ng-container matColumnDef="description">
-    <th mat-header-cell *matHeaderCellDef>Descripción</th>
-    <td mat-cell *matCellDef="let element">{{ element.description }}</td>
-  </ng-container>
-  <!-- Action Column -->
-  <ng-container matColumnDef="action">
-    <th mat-header-cell *matHeaderCellDef style="text-align: center;">Acción</th>
-    <td mat-cell *matCellDef="let element" style="text-align: center;">
-      <button
-        mat-mini-fab
-        color="info"
-        matTooltip="Editar la playlist"
-        aria-label="Editar la playlist"
-        [routerLink]="['/playlist/playlist-edit', element.name]"
-      >
-        <mat-icon>edit</mat-icon>
-      </button>
-      <button
-        mat-mini-fab
-        color="primary"
-        matTooltip="Ver detalle"
-        aria-label="Ver detalle"
-        [routerLink]="['/playlist', element.name]"
-      >
-        <mat-icon>visibility</mat-icon>
-      </button>
-      
-
-        <button mat-mini-fab  color="warn"
-                            matTooltip="Eliminar playlist"
-                            aria-label="Eliminar playlist"
+    <!-- Description Column -->
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef>Descripción</th>
+      <td mat-cell *matCellDef="let element">{{ element.description }}</td>
+    </ng-container>
+    <!-- Action Column -->
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef style="text-align: center">
+        Acción
+      </th>
+      <td mat-cell *matCellDef="let element" style="text-align: center">
+        <button
+          mat-mini-fab
+          color="info"
+          matTooltip="Editar la playlist"
+          aria-label="Editar la playlist"
+          [routerLink]="['/playlist/playlist-edit', element.name]"
         >
-          <mat-icon>delete</mat-icon>
+          <mat-icon>edit</mat-icon>
         </button>
-     
-    </td>
-  </ng-container>
+        <button
+          mat-mini-fab
+          color="primary"
+          matTooltip="Ver detalle"
+          aria-label="Ver detalle"
+          [routerLink]="['/playlist', element.name]"
+        >
+          <mat-icon>visibility</mat-icon>
+        </button>
+      </td>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-</table>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+ 
+</ng-template>
