--- a/src/app/shared/error-page/error-page.component.html
+++ b/src/app/shared/error-page/error-page.component.html
@@ -1,1 +1,12 @@
-<p>error-page works!</p>
+<div class="container">
+  <div class="copy-container center-xy">
+    <h1 class="text-primary">Ups! :(</h1>
+    <p class="text-dark">No se encontró la página.</p>
+    <span class="handle"></span>
+    <hr class="text-white" />
+    <br />
+    <button routerLink="/playlist" mat-raised-button color="warn">
+      Volver al inicio
+    </button>
+  </div>
+</div>
