--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -2,41 +2,46 @@
   <mat-card-title>Spuchifai | Ingreso</mat-card-title>
   <br />
   <mat-card-content fxLayout="column">
-    <!-- <form [formGroup]="form" (ngSubmit)="submit()"> -->
-    <!-- <p> -->
-    <mat-form-field>
-      <input
-        type="text"
-        matInput
-        [(ngModel)]="this.user.usuario"
-        placeholder="Usuario"
-        required
-      />
-    </mat-form-field>
-    <!-- </p> -->
+    <form [formGroup]="form" (ngSubmit)="login(form)">
+      <p>
+        <mat-form-field>
+          <input
+            type="text"
+            matInput
+            formControlName="usuario"
+            placeholder="Usuario"
+            required
+          />
+          <mat-error *ngIf="form.controls['usuario'].errors?.['required']">
+            El usuario es requerido
+          </mat-error>
+        </mat-form-field>
+      </p>
 
-    <p>
-      <mat-form-field>
-        <input
-          type="password"
-          matInput
-          [(ngModel)]="this.password"
-          placeholder="Contraseña"
-          required
-        />
-      </mat-form-field>
-    </p>
+      <p>
+        <mat-form-field>
+          <input
+            type="password"
+            matInput
+            formControlName="contraseña"
+            placeholder="Contraseña"
+            required
+          />
+          <mat-error *ngIf="form.controls['contraseña'].errors?.['required']">
+            La contraseña es requerida
+          </mat-error>
+        </mat-form-field>
+      </p>
 
-    <!-- <p *ngIf="error" class="error">
+      <!-- <p *ngIf="error" class="error">
     {{ error }}
   </p> -->
 
-    <div class="button">
-      <button type="submit" mat-raised-button color="primary" (click)="login()">
-        Ingresar
-      </button>
-    </div>
-
-    <!-- </form> -->
+      <div class="button">
+        <button type="submit" mat-raised-button color="primary">
+          Ingresar
+        </button>
+      </div>
+    </form>
   </mat-card-content>
 </mat-card>
