--- a/src/app/playlists/pages/playlist-list/playlist-list.component.html
+++ b/src/app/playlists/pages/playlist-list/playlist-list.component.html
@@ -12,7 +12,7 @@
 </div>
 
 <ng-template #tablePlaylist>
-  <button mat-raised-button color="primary" routerLink="/playlist/playlist-add">
+  <button mat-raised-button class="bg-success text-white" routerLink="/playlist/playlist-add">
     <mat-icon>add</mat-icon>
     <span>Agregar nueva playlist</span>
   </button>
@@ -38,7 +38,7 @@
       <td mat-cell *matCellDef="let element" style="text-align: center">
         <button
           mat-mini-fab
-          color="info"
+          class="bg-secondary"
           matTooltip="Editar la playlist"
           aria-label="Editar la playlist"
           [routerLink]="['/playlist/playlist-edit', element.name]"
@@ -47,13 +47,22 @@
         </button>
         <button
           mat-mini-fab
-          color="primary"
+          class="bg-primary"
           matTooltip="Ver detalle"
           aria-label="Ver detalle"
           [routerLink]="['/playlist', element.name]"
         >
           <mat-icon>visibility</mat-icon>
         </button>
+        <button
+        mat-mini-fab
+        class="bg-success"
+        matTooltip="Agregar cancion"
+        aria-label="Agregar cancion"
+        [routerLink]="['/playlist', element.name, 'song-add']"
+      >
+        <mat-icon>note_add</mat-icon>
+      </button>
       </td>
     </ng-container>
 
