--- a/src/app/playlists/pages/playlist/playlist.component.html
+++ b/src/app/playlists/pages/playlist/playlist.component.html
@@ -1,6 +1,18 @@
-<h1>{{ playlist.name }}</h1>
+<h2 class="text-primary">
+  <span class="text-dark">Playlist: </span> {{ playlist.name }}
+</h2>
 <h3>{{ playlist.description }}</h3>
 <mat-divider></mat-divider>
+<br />
+<br />
+<button
+  mat-raised-button
+  color="primary"
+  [routerLink]="['/playlist', playlist.name, 'song-add']"
+>
+  <mat-icon>note_add</mat-icon>
+  <span> Agregar nueva canción</span>
+</button>
 <br />
 <br />
 <h2 class="text-primary">Canciones</h2>
@@ -33,13 +45,14 @@
     <th mat-header-cell *matHeaderCellDef>Acción</th>
     <td mat-cell *matCellDef="let element">
       <button
-        mat-button
-        color="primary"
-        [routerLink]="['/playlist', element.name]"
+        mat-raised-button
+        matTooltip="Editar cancion"
+        aria-label="Editar cancion"
+        class="bg-secondary text-white"
+        [routerLink]="['/playlist', playlist.name, 'song-edit', element.name]"
       >
-        <mat-icon>visibility</mat-icon>
+        <mat-icon>edit</mat-icon>
       </button>
-     
     </td>
   </ng-container>
 
