--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -33,9 +33,9 @@
         </mat-form-field>
       </p>
 
-      <!-- <p *ngIf="error" class="error">
-    {{ error }}
-  </p> -->
+      <p *ngIf="this.errorLogin" class="error">
+        {{ this.errorLogin }}
+      </p>
 
       <div class="button">
         <button type="submit" mat-raised-button color="primary">
